Refactored to use single Document table for questions and answers.
The database now uses an autoincrementing primary key. Primary keys are converted to hashes before returning to the client.
There are testing routes that can be used to clear the database as well as loading sample data.
API specification has been updated.
Everything is currently commented out except for GET endpoints.
