# internal/robokache/server.go
@@ -1,16 +1,20 @@
 package robokache
 
 import (
-	"database/sql"
 	"log"
 	"net/http"
 	"os"
 	"strings"
+	"fmt"
 
 	"github.com/gin-gonic/gin"
-	"github.com/google/uuid"
 	_ "github.com/mattn/go-sqlite3" // makes database/sql point to SQLite
+	"github.com/jmoiron/sqlx"
+	"github.com/speps/go-hashids"
 )
+
+var db *sqlx.DB
+var hid *hashids.HashID
 
 func check(e error) {
 	if e != nil {
@@ -25,19 +29,35 @@ func fatal(err error) {
 }
 
 // Question represents a user's question
-type Question struct {
-	ID         string
-	Owner      string
-	Visibility visibility
-	Data       string
+type Document struct {
+    // Omit in JSON to prevent exposing primary key
+	ID         int            `db:"id"     json:"-"`
+	// Replaces ID in JSON, not stored in db
+	Hash       string         `db:"-"      json:"id"`
+	// Allow parent to be null using a pointer
+	Parent     *int           `db:"parent" json:"-"`
+	// Replaces parent field in JSON, not stored in db
+	ParentHash string         `db:"-"      json:"parent"`
+
+	Owner      string         `db:"owner"`
+	Visibility visibility     `db:"visibility"`
 }
 
-// Answer represents the answer to a question
-type Answer struct {
-	ID         string
-	Question   string
-	Visibility visibility
-	Data       string
+func addHash(doc *Document) error {
+	// Change document ID to hash
+	var err error
+	doc.Hash, err = idToHash(doc.ID)
+	if err != nil {
+		return err
+	}
+	// Change parent ID to hash
+	if doc.Parent != nil {
+		doc.ParentHash, err = idToHash(*doc.Parent)
+		if err != nil {
+			return err
+		}
+	}
+	return nil
 }
 
 type visibility int
@@ -95,87 +115,117 @@ func SetupRouter() *gin.Engine {
 	authorized := r.Group("/api")
 	authorized.Use(GetUser)
 	{
-		authorized.GET("/questions", func(c *gin.Context) {
+		authorized.GET("/document", func(c *gin.Context) {
 			// Get user
 			userEmail := c.GetString("userEmail")
 
 			// Get user's documents from database
-			questions, err := GetQuestions(userEmail)
+			documents, err := GetDocuments(userEmail)
+			if err != nil {
+				handleErr(c, err)
+				return
+			}
+
+			for i := range documents {
+				addHash(&documents[i])
+			}
+
+			// Return
+			c.JSON(200, documents)
+		})
+		authorized.GET("/document/:id", func(c *gin.Context) {
+			// Get user
+			userEmail := c.GetString("userEmail")
+
+			// Get document id
+			id, err := hashToID(c.Param("id"))
+			if err != nil {
+				handleErr(c, err)
+				return
+			}
+
+			// Get document from database
+			document, err := GetDocument(userEmail, id)
+			if err != nil {
+				handleErr(c, err)
+				return
+			}
+
+			addHash(&document)
+
+			// Return
+			c.JSON(200, document)
+		})
+		authorized.GET("/document/:id/data", func(c *gin.Context) {
+			// Get user
+			userEmail := c.GetString("userEmail")
+
+			// Get document id
+			id, err := hashToID(c.Param("id"))
+			if err != nil {
+				handleErr(c, err)
+				return
+			}
+
+			// Get document from database to ensure we have permission
+			// to access this endpoint
+			_, err = GetDocument(userEmail, id)
+			if err != nil {
+				handleErr(c, err)
+				return
+			}
+
+			// Get data from disk
+			data, err := GetData(id)
 			if err != nil {
 				handleErr(c, err)
 				return
 			}
 
 			// Return
-			c.JSON(200, questions)
+			c.JSON(200, data)
 		})
-		authorized.GET("/answers", func(c *gin.Context) {
+		authorized.GET("/document/:id/children", func(c *gin.Context) {
 			// Get user
 			userEmail := c.GetString("userEmail")
 
-			// Get question id
-			questionID := c.Query("question_id")
-
-			// Get user's documents from database
-			answers, err := GetAnswers(userEmail, questionID)
+			// Get document id
+			id, err := hashToID(c.Param("id"))
 			if err != nil {
 				handleErr(c, err)
 				return
 			}
 
-			// Return
-			c.JSON(200, answers)
-		})
-		authorized.GET("/questions/:id", func(c *gin.Context) {
-			// Get user
-			userEmail := c.GetString("userEmail")
-
-			// Get question id
-			id := c.Param("id")
-
-			// Get user's documents from database
-			question, err := GetQuestion(userEmail, id)
+			// Get documents that have this as a parent
+			documents, err := GetDocumentChildren(userEmail, id)
 			if err != nil {
 				handleErr(c, err)
 				return
 			}
 
-			// Return
-			c.JSON(200, question)
-		})
-		authorized.GET("/answers/:id", func(c *gin.Context) {
-			// Get user
-			userEmail := c.GetString("userEmail")
-
-			// Get answer id
-			id := c.Param("id")
-
-			// Get user's documents from database
-			answer, err := GetAnswer(userEmail, id)
-			if err != nil {
-				handleErr(c, err)
-				return
+			// Convert IDs to hashes
+			for i := range documents {
+				addHash(&documents[i])
 			}
 
 			// Return
-			c.JSON(200, answer)
+			c.JSON(200, documents)
 		})
+		/*
 		authorized.POST("/questions", func(c *gin.Context) {
 			// Get user
 			userEmail := c.GetString("userEmail")
 
-			// Get request body
-			data, err := c.GetRawData()
-			fatal(err)
+			var doc Question
+			err := c.ShouldBindJSON(&doc)
+			if err != nil {
+				handleErr(c, err)
+				return
+			}
 
-			// Get visibility query parameter
-			visibility := visibilityToInt[c.DefaultQuery("visibility", "shareable")]
-
-			// Generate uuid
-			id := uuid.New().String()
+			doc.Owner = userEmail
 
 			// Add question to DB
-			doc := Question{id, userEmail, visibility, string(data)}
 			err = PostQuestion(userEmail, doc)
 			if err != nil {
 				handleErr(c, err)
@@ -213,30 +263,85 @@ func SetupRouter() *gin.Engine {
 			// Return
 			c.JSON(201, id)
 		})
+		*/
+	}
+
+	// The rest of these routes are only added if we have a
+	// testing variable (these allow for easy db modification
+	_, testingEnv := os.LookupEnv("TESTING")
+	if testingEnv {
+		r.GET("/db/clear", func(c *gin.Context) {
+			_, err := db.Exec(`DROP table document`)
+			if err != nil {
+				handleErr(c, err)
+				return
+			}
+			SetupDB()
+			c.JSON(200, nil)
+		})
+
+		r.GET("/db/loadSample", func(c *gin.Context) {
+			// Load sample data
+			_, err := db.Exec(
+				`INSERT INTO document(id, parent, owner, visibility) VALUES
+					(0, NULL, 'user1@robokache.com', 3)`)
+			if err != nil {
+				handleErr(c, err)
+				return
+			}
+			_, err = db.Exec(
+				`INSERT INTO document(id, parent, owner, visibility) VALUES
+					(1, 0, 'user1@robokache.com', 3)`)
+			if err != nil {
+				handleErr(c, err)
+				return
+			}
+			c.JSON(200, nil)
+		})
 	}
 	return r
 }
 
-// SetupDB sets up the SQLite database
-func SetupDB() {
-	os.RemoveAll(dataDir)
-	os.Mkdir(dataDir, 0755)
+func SetupHashids() {
+	hd := hashids.NewData()
+	hd.Salt = "This salt is unguessable. Don't even try"
+	hd.MinLength = 8
 
-	db, err := sql.Open("sqlite3", dbFile)
+	var err error
+	hid, err = hashids.NewWithData(hd)
 	if err != nil {
 		log.Fatal(err)
 	}
-	defer db.Close()
+}
+
+// Convert an API hash to an integer ID (database primary key)
+func hashToID(hash string) (int, error) {
+	ids, err := hid.DecodeWithError(hash)
+	if err != nil || len(ids) != 1 {
+		return -1, fmt.Errorf("Bad Request: Invalid document ID")
+	}
+	return ids[0], nil
+}
+// Convert an API hash to an integer ID (database primary key)
+func idToHash(id int) (string, error) {
+	hash, err := hid.Encode([]int{id})
+	if err != nil {
+		return "", err
+	}
+	return hash, nil
+}
+
+// SetupDB sets up the SQLite database
+func SetupDB() {
+	db = sqlx.MustConnect("sqlite3", dbFile)
 
 	sqlStmt := `
-	CREATE TABLE questions (id TEXT NOT NULL PRIMARY KEY, owner TEXT, visibility INTEGER);
-	DELETE FROM questions;
-	CREATE TABLE answers (id TEXT NOT NULL PRIMARY KEY, question TEXT, visibility INTEGER);
-	DELETE FROM answers;
-	`
-	_, err = db.Exec(sqlStmt)
-	if err != nil {
-		log.Printf("%q: %s\n", err, sqlStmt)
-		return
-	}
+		CREATE TABLE IF NOT EXISTS document (
+			id INTEGER PRIMARY KEY AUTOINCREMENT,
+			parent INTEGER,
+			owner TEXT,
+			visibility INTEGER
+		);`
+
+	db.MustExec(sqlStmt)
 }
